# render-graph-study

./: .gitmodules  CMakeLists.txt
assets/shaders/: blur.frag  diffuse.frag  diffuse.vert  fullscreen_quad_grayscale.frag  fullscreen_quad_texture_sampler.frag  fullscreen_quad_without_vbo.vert  phong.frag  phong.vert  solid_color.frag  solid_color.vert
assets/shaders/lib/: DefaultVertexAttributes.glsl  SceneUniforms.glsl  VertexData.glsl
assets/shaders/lib/lights/: AmbientLight.glsl  DirectionalLights.glsl  HemisphericalLight.glsl  PointLights.glsl
src/: Assets.hpp.in  CMakeLists.txt  Lights.cpp  Lights.hpp  Material.cpp  Material.hpp  Object.hpp  Scene.cpp  Scene.hpp  main.cpp
